# RadAgent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  cleanup_audit_report.md  demo_langgraph.py  demo_langgraph_v4.py  pyproject.toml  radagent-tui-e2e-testing.md  repl.sh  requirements.txt  run.py  start-radagent-tui.sh  start-radagent-web.sh  test_mt.mac
.github/workflows/: ci.yml  mvp1-e2e.yml
agent_core/: __init__.py  llm.py  main.py  naming.py  pipeline.py  repl.py  requirements_review.py
agent_core/agent_loop/: __init__.py  loop.py
agent_core/agent_tools/: __init__.py  executor.py  graph.py  orbit_radiation.py  registry.py  selection.py
agent_core/app/: __init__.py  schemas.py  service.py
agent_core/artifacts/: __init__.py  graph.py  nodes.py  schemas.py
agent_core/chat/: __init__.py  agent.py  briefing.py  orbit_radiation_tool.py  prompts.py
agent_core/config/: __init__.py  environment.py  rag_registry.json  rag_registry.py  workspace.py
agent_core/context/: __init__.py  doc_store.py  graph.py  nodes.py  rag_client.py  schemas.py
agent_core/desktop/: __init__.py  __main__.py  app.py  bridge.py
agent_core/dev_tools/: __init__.py  files.py  geant4_docs.py  schemas.py  security.py  shell.py  web_search.py
agent_core/g4_codegen/: __init__.py  agentic_repair.py  cmake_template.py  context_coordinator.py  example_lookup.py  global_integration_agent.py  global_llm_repair.py  global_repair.py  graph_nodes.py  interface_contracts.py  io_nodes.py  physics_quality_reviewer.py  project_agent.py  runtime_execution_auditor.py  schemas.py  template_project.py
agent_core/g4_modeling/: __init__.py  subgraph_io.py  subgraph_state.py
agent_core/gates/: __init__.py  base_gates.py  credibility_gate.py  failure_classifier.py  g4_modeling_gates.py  gate_runner.py  graph.py  nodes.py  output_quality.py  schemas.py  visual_review_gate.py
agent_core/graph/: __init__.py  graph_builder.py  main_graph.py  main_routes.py  main_state.py  routes.py  state.py
agent_core/human_confirmation/: __init__.py  nodes.py  prompts.py  reports.py  schemas.py  validators.py
agent_core/intent/: __init__.py  fallback_rules.py  nodes.py  prompts.py  router.py  schemas.py
agent_core/models/: __init__.py  client.py  config.py  errors.py  gateway.py  mock.py  prompts.py  registry.py  schemas.py  tool_logger.py  usage.py
agent_core/nodes/: apply_patch.py  build_simulation_ir.py  build_task_spec.py  classify_failure.py  generate_report.py  generate_test_plan.py  parse_simulation_results.py  parse_user_request.py  plan_code_architecture.py  plan_simulation.py  prepare_local_rag_workspace.py  retrieve_error_context.py  retrieve_g4_context.py  retrieve_required_context.py  retrieve_spice_context.py  retrieve_tcad_context.py  retrieve_web_context.py  review_code_patch.py  route_rag.py  run_gate_checks.py  score_combined_context_sufficiency.py  score_rag_sufficiency.py  validate_data_contract.py  (+4 more)
benchmarks/: README.md  golden_set.example.json  nist_photon_attenuation.json
device_canvas/: README.md  app.js  cad_core.js  index.html  index.konva-v1.html  serve.py
docs/: environment-and-nist-validation.md  frontend_service_layer.md  global_integration_agent.md  radagent_future_roadmap.md
e2e_runs/fresh_verify_workspace/jobs/real_full_graph_fresh_verify_fixed_provenance/05_codegen/integration/runtime_attempt_1/geant4_project/: CMakeLists.txt
e2e_runs/fresh_verify_workspace/jobs/real_full_graph_fresh_verify_fixed_provenance/05_codegen/integration/runtime_attempt_1/geant4_project/include/: ActionInitialization.hh  EventAction.hh  Hit.hh  OutputManager.hh  PrimaryGeneratorAction.hh  ScoringManager.hh
e2e_runs/fresh_verify_workspace/jobs/real_full_graph_fresh_verify_fixed_provenance/05_codegen/integration/runtime_attempt_1/geant4_project/macros/: physics_list.mac  run.mac
e2e_runs/fresh_verify_workspace/jobs/real_full_graph_fresh_verify_fixed_provenance/05_codegen/integration/runtime_attempt_1/geant4_project/src/: EventAction.cc  Hit.cc  OutputManager.cc  PlacementManager.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
knowledge_base/: __init__.py  llm_client.py
radagent/: __init__.py  __main__.py  config.py  graph.py  log.py  main.py  schemas.py  state.py  status.py
radagent/templates/edep_basic/: CMakeLists.txt  exampleB1.cc.tpl
radagent/templates/edep_basic/src/: DetectorConstruction.cc.tpl  PrimaryGeneratorAction.cc.tpl
repair_logs/: FINAL_REPAIR_REPORT.md  FINAL_REPORT.md  phase0_repo_state.md  phase1_compileall.md  phase2_git_status_after_regen.md  tool_calls.jsonl
scripts/: acceptance_check_artifacts.py  collect_mvp1_artifacts.py  generate_complex_model_artifact.py  golden_set_benchmark.py  inspect_job_logs.py  make_review_artifact.py  model_call_metrics.py  physics_benchmark.py  radagent_visual_smoke_project.py  regenerate_artifacts.py  regenerate_fixtures.py  reproduce_nist_benchmark.sh  run_mvp1_e2e.py  run_photon_attenuation_geant4.py  run_pipeline.py  run_real_full_graph_test.py  run_real_module_tests.py  setup_radagent_env.sh  validate_module_context_examples.py  view_graph.py
simulation_workspace/simulation_workspace/jobs/job_20260606_203227_e2296c/05_geant4/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SensitiveDetector.hh  VoxelScorer.cc  VoxelScorer.hh  geant4_sim.cc
tests/: test_memory.py
vis_demo/: CMakeLists.txt  Camera.cpp  Camera.h  GLWidget.cpp  GLWidget.h  ParticleData.cpp  ParticleData.h  SceneBuilder.cpp  SceneBuilder.h  main.cpp  run.sh
vis_demo/shaders/: line.frag  line.vert  phong.frag  phong.vert
web_workbench/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
workspace/20260522_172508_三层屏蔽结构_铝_石墨_硅_proton400MeV/: CMakeLists.txt  exampleB1.cc
workspace/20260522_172508_三层屏蔽结构_铝_石墨_硅_proton400MeV/include/: SteppingAction.hh
workspace/20260522_172508_三层屏蔽结构_铝_石墨_硅_proton400MeV/src/: PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
(+1054 files in other folders)
