[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiation-sim-agent"
version = "0.1.0"
description = "LangGraph-based autonomous code generation agent for Geant4 radiation simulation"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "aep8>=1.0.0",
    "astropy>=6.0",
    "skyfield>=1.49",
    "sgp4>=2.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
tui = [
    "textual>=0.80",
]
wechat-scraper = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
]

[project.scripts]
radagent-tui = "agent_core.tui.app:main"
radagent-web = "agent_core.web.server:main"

[tool.setuptools.packages.find]
include = ["agent_core*", "knowledge_base*"]

[tool.setuptools.package-data]
agent_core = ["policies/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["agent_core", "knowledge_base", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"knowledge_base/**/*.py" = ["E402", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "requires_geant4: requires Geant4 environment",
    "requires_tcad: requires TCAD environment",
    "requires_spice: requires ngspice environment",
    "e2e: end-to-end pipeline tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
